--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </div>
 <div class="container align">
   <h5>Video presentation of my first project</h5>
-  <iframe id="video" src="https://www.youtube.com/embed/-lvhidpLT58" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe id="video" src="https://www.youtube.com/embed/-lvhidpLT58" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 </div>
 <div id="footer" class="jumbotron jumbotron-fluid bg-dark">
 <div class="container-fluid text-white">
