--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <p class="font-weight-bold p-3 pos">I am novice programmer and Wev-developer!</p>
       <br>
       <button type="button" class="btn btn-dark"> Support me! </button>
-      <a href="https://ibb.co/xjfV776"><img src="https://i.ibb.co/4TYBVVp/MainPic.png" id="mainPic" border="0" class ="mainPic"></a>     
+      <a href="https://ibb.co/xjfV776"><img src="https://i.ibb.co/4TYBVVp/MainPic.png" id="mainPic"></a>     
   </div>
 </div>
 <div class="container">
@@ -41,25 +41,25 @@
             <h4>Litrature</h4>
             <br>
             <br>
-            <a href="https://imgbb.com/"><img src="https://i.ibb.co/ZY1N3vX/book.png" alt="book" border="0"></a>
+            <a href="https://imgbb.com/"><img src="https://i.ibb.co/ZY1N3vX/book.png" alt="book"></a>
           </div>
           <div class="col-sm-3">
             <h4>Coding</h4>
             <br>
             <br>
-            <a href="https://imgbb.com/"><img src="https://i.ibb.co/YNjcbwv/code.png" alt="code" border="0"></a><br /><a target='_blank' href='https://ru.imgbb.com/'></a>
+            <a href="https://imgbb.com/"><img src="https://i.ibb.co/YNjcbwv/code.png" alt="code"></a><br /><a target='_blank' href='https://ru.imgbb.com/'></a>
             <br>
           </div>
           <div class="col-sm-3">
             <h4>Graphic Desighn</h4>
             <br>
-            <a href="https://imgbb.com/"><img src="https://i.ibb.co/dMBRrF9/graphic.png" alt="graphic" border="0"></a>
+            <a href="https://imgbb.com/"><img src="https://i.ibb.co/dMBRrF9/graphic.png" alt="graphic"></a>
           </div>
           <div class="col-sm-3">
             <h4>Art</h4>
             <br>
             <br>
-            <a href="https://imgbb.com/"><img src="https://i.ibb.co/QmVkjyB/paint.png" alt="paint" border="0"></a>
+            <a href="https://imgbb.com/"><img src="https://i.ibb.co/QmVkjyB/paint.png" alt="paint"></a>
         </div>      
       </div>         
     </div>
